--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,22 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Global ignores
+node_modules/
+.env
+.DS_Store
+
+# Specific folders
+client/node_modules/
+client/.env
+server/node_modules/
+server/.env
+
+# Logs
+*.log
+npm-debug.log*
+
+# Build artifacts
+client/build/
+server/dist/
